--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -4102,6 +4102,314 @@ enhancedportals {
 }
 
 
+erebus {
+    B:algae=false
+    B:altarBase=false
+    B:altarHealing=false
+    B:altarLightning=false
+    B:altarRepair=false
+    B:altarXP=false
+    B:amber=false
+    B:amber.1=false
+    B:amber.2=false
+    B:amberBrickStairs=false
+    B:antlionEgg=false
+    B:antlionSpawner=false
+    B:bambooBridge=false
+    B:bambooCrate=false
+    B:bambooCrop=false
+    B:bambooLadder=false
+    B:bambooPole=false
+    B:bambooTorch=false
+    B:blockBones=false
+    B:blockJade=true
+    B:blockSilk=true
+    B:bulbCappedShroom=false
+    B:bullrush=false
+    B:bundleshroom=false
+    B:cabbageCrop=false
+    B:capstone=true
+    B:composter=false
+    B:craftingAltar=false
+    B:desertShrub=false
+    B:dooramber=false
+    B:doorasper=false
+    B:doorbaobab=false
+    B:doorcypress=false
+    B:dooreucalyptus=false
+    B:doormahogany=false
+    B:doormarshwood=false
+    B:doormossbark=false
+    B:doorpetrified=false
+    B:doorrotten=false
+    B:doorscorched=false
+    B:droughtedShrub=false
+    B:dutchCap=false
+    B:extenderThingy=false
+    B:fern=false
+    B:fiddlehead=false
+    B:fireBloom=false
+    B:flower=true
+    B:flower.1=true
+    B:flower.10=true
+    B:flower.11=true
+    B:flower.12=true
+    B:flower.13=true
+    B:flower.14=true
+    B:flower.15=true
+    B:flower.2=true
+    B:flower.3=true
+    B:flower.4=true
+    B:flower.5=true
+    B:flower.6=true
+    B:flower.7=true
+    B:flower.8=true
+    B:flower.9=true
+    B:flowerPlanted=false
+    B:flowerPlanted.1=false
+    B:flowerPlanted.10=false
+    B:flowerPlanted.11=false
+    B:flowerPlanted.12=false
+    B:flowerPlanted.13=false
+    B:flowerPlanted.14=false
+    B:flowerPlanted.2=false
+    B:flowerPlanted.3=false
+    B:flowerPlanted.4=false
+    B:flowerPlanted.5=false
+    B:flowerPlanted.6=false
+    B:flowerPlanted.7=false
+    B:flowerPlanted.8=false
+    B:flowerPlanted.9=false
+    B:forceField=false
+    B:gaeanKeystone=false
+    B:ghostSand=false
+    B:glowGemBlock=false
+    B:glowingJar=false
+    B:glowshroom=false
+    B:glowshroomStalk=false
+    B:glowshroomStalkDown1=false
+    B:glowshroomStalkDown2=false
+    B:glowshroomStalkDown3=false
+    B:glowshroomStalkE1=false
+    B:glowshroomStalkE3=false
+    B:glowshroomStalkN1=false
+    B:glowshroomStalkN3=false
+    B:glowshroomStalkNS2=false
+    B:glowshroomStalkS1=false
+    B:glowshroomStalkS3=false
+    B:glowshroomStalkW1=false
+    B:glowshroomStalkW3=false
+    B:glowshroomStalkWE2=false
+    B:gneiss=true
+    B:gneiss.1=true
+    B:gneiss.2=true
+    B:gneiss.3=true
+    B:gneiss.4=true
+    B:gneiss.5=true
+    B:gneissStairs0=false
+    B:gneissStairs1=false
+    B:gneissStairs2=false
+    B:gneissStairs3=false
+    B:gneissStairs4=false
+    B:gneissStairs5=false
+    B:gneissVent=false
+    B:greenMushroom=false
+    B:hanger=false
+    B:heartBerryBush=false
+    B:highCapped=false
+    B:honeyBlock=false
+    B:honeyCombBlock=false
+    B:honeyTreat=false
+    B:insectRepellent=false
+    B:jadeBerryBush=false
+    B:jarOHoney=false
+    B:jumpingSpiderSpawner=false
+    B:kaizerfinger=false
+    B:leavesAsper.4=false
+    B:leavesBaobab.4=false
+    B:leavesCypress.4=false
+    B:leavesEucalyptus.4=false
+    B:leavesMahogany.4=false
+    B:leavesMarshwood.4=false
+    B:leavesMossbark.4=false
+    B:leavesSap.4=false
+    B:lightningSpeedBlock=true
+    B:logAsper=true
+    B:logBaobab=true
+    B:logCypress=true
+    B:logEucalyptus=true
+    B:logMahogany=true
+    B:logMarshwood=true
+    B:logMossbark=true
+    B:logRotten=true
+    B:logSap=true
+    B:loghollowacacia=false
+    B:logscorched=true
+    B:magmaCrawlerSpawner=false
+    B:mirbrick=true
+    B:mireCoral=false
+    B:mucusBomb=true
+    B:mud=true
+    B:mudBricks=true
+    B:mushroomCap0=true
+    B:mushroomCap1=true
+    B:mushroomCap2=true
+    B:mushroomCap3=true
+    B:mushroomCap4=true
+    B:nettle=false
+    B:nettleFlowered=false
+    B:offeringAltar=false
+    B:oreAluminium=true
+    B:oreCoal=true
+    B:oreCopper=true
+    B:oreDiamond=true
+    B:oreEmerald=true
+    B:oreEncrustedDiamond=true
+    B:oreFossil=true
+    B:oreGneiss=true
+    B:oreGold=true
+    B:oreIron=true
+    B:oreJade=true
+    B:oreLapis=true
+    B:oreLead=true
+    B:orePetrifiedWood=true
+    B:oreSilver=true
+    B:oreTemple=true
+    B:oreTin=true
+    B:petrifiedCraftingTable=true
+    B:petrifiedWoodChest=false
+    B:petrifiedWoodPlanks=true
+    B:petrifiedWoodStairs=false
+    B:plankStairAsper=false
+    B:plankStairBamboo=false
+    B:plankStairBaobab=false
+    B:plankStairCypress=false
+    B:plankStairEucalyptus=false
+    B:plankStairMahogany=false
+    B:plankStairMarshwood=false
+    B:plankStairMossbark=false
+    B:plankStairRotten=false
+    B:plankStairWhite=false
+    B:planks=true
+    B:planks.1=true
+    B:planks.10=true
+    B:planks.2=true
+    B:planks.3=true
+    B:planks.4=true
+    B:planks.5=true
+    B:planks.7=true
+    B:planks.8=true
+    B:planks.9=true
+    B:planksscorched=true
+    B:planksvarnished=true
+    B:portal=false
+    B:quickSand=true
+    B:redGem=true
+    B:redGem.1=true
+    B:reinExo=true
+    B:saplessLog=true
+    B:saplingAsper=false
+    B:saplingBaobab=false
+    B:saplingCypress=false
+    B:saplingEucalyptus=false
+    B:saplingMahogany=false
+    B:saplingMarshwood=false
+    B:saplingMossbark=false
+    B:saplingSap=false
+    B:siloRoof=false
+    B:siloSupports=false
+    B:siloTank=false
+    B:slabPlanksAsper=false
+    B:slabPlanksBamboo=false
+    B:slabPlanksBaobab=false
+    B:slabPlanksCypress=false
+    B:slabPlanksEucalyptus=false
+    B:slabPlanksMahogany=false
+    B:slabPlanksMarshwood=false
+    B:slabPlanksMossbark=false
+    B:slabPlanksRotten=false
+    B:slabPlanksWhite=false
+    B:slabpetrifiedWoodPlanks0=false
+    B:slabumberPaver0=false
+    B:slabumberPaver1=false
+    B:slabumberstone0=false
+    B:slabumberstone1=false
+    B:slabumberstone2=false
+    B:slabumberstone3=false
+    B:slabumberstone4=false
+    B:smoothieMaker=false
+    B:spiderSpawner=false
+    B:stigma=true
+    B:stigma.1=true
+    B:stigma.10=true
+    B:stigma.11=true
+    B:stigma.12=true
+    B:stigma.13=true
+    B:stigma.2=true
+    B:stigma.3=true
+    B:stigma.4=true
+    B:stigma.5=true
+    B:stigma.6=true
+    B:stigma.7=true
+    B:stigma.8=true
+    B:stigma.9=true
+    B:sundew=false
+    B:swampBerryBush=false
+    B:swampPlant=false
+    B:swampVent=false
+    B:tangledStalk=false
+    B:tarantulaEgg=false
+    B:tarantulaSpawner=false
+    B:templeBrick=true
+    B:templeBrickUnbreaking=true
+    B:templePillar=true
+    B:templeTeleporter=false
+    B:templeTile=true
+    B:thorns=false
+    B:turnipsCrop=false
+    B:umberFurnace=false
+    B:umberGolemStatue=false
+    B:umberPaver=true
+    B:umberPaver.1=true
+    B:umberPaver.2=true
+    B:umbercobbleStairs0=false
+    B:umbercobbleStairs1=false
+    B:umbercobbleStairs2=false
+    B:umbercobbleStairs3=false
+    B:umbercobbleStairs4=false
+    B:umbercobbleStairs5=false
+    B:umbercobbleStairs6=false
+    B:umberstone=true
+    B:umberstone.1=true
+    B:umberstone.2=true
+    B:umberstone.3=true
+    B:umberstone.4=true
+    B:umberstone.5=true
+    B:umberstone.6=true
+    B:umberstoneButton=false
+    B:umberstonePillar=true
+    B:velocityBlock=true
+    B:volcanicRock=true
+    B:wallErebus=false
+    B:wallErebus.1=false
+    B:wallErebus.2=false
+    B:wallErebus.3=false
+    B:wallErebus.4=false
+    B:wallErebus.5=false
+    B:wallErebus.6=false
+    B:wallErebus.7=false
+    B:wallErebus.8=false
+    B:wallPlants=false
+    B:wallPlants.1=false
+    B:waspNestBlock=false
+    B:waspNestStairs=false
+    B:waspSpawner=false
+    B:waterFlower=false
+    B:weepingBlue=false
+    B:witherWeb=false
+}
+
+
 expandedredstone {
     B:expandedredstoneblockcamo=false
     B:expandedredstoneblockfullblock=false
@@ -5218,6 +5526,7 @@ gardentrees {
     B:thinlog.1135=false
     B:thinlog.1185=false
     B:thinlog.1201=false
+    B:thinlog.1216=false
     B:thinlog.1228=false
     B:thinlog.1232=false
     B:thinlog.1244=false
@@ -5234,6 +5543,8 @@ gardentrees {
     B:thinlog.12767=false
     B:thinlog.12768=false
     B:thinlog.12769=false
+    B:thinlog.12770=false
+    B:thinlog.12771=false
     B:thinlog.12849=false
     B:thinlog.12850=false
     B:thinlog.12851=false
@@ -5264,6 +5575,7 @@ gardentrees {
     B:thinlog.13423=false
     B:thinlog.13473=false
     B:thinlog.13489=false
+    B:thinlog.13504=false
     B:thinlog.13516=false
     B:thinlog.13520=false
     B:thinlog.13532=false
@@ -5307,6 +5619,8 @@ gardentrees {
     B:thinlog.4575=false
     B:thinlog.4576=false
     B:thinlog.4577=false
+    B:thinlog.4578=false
+    B:thinlog.4579=false
     B:thinlog.4657=false
     B:thinlog.4658=false
     B:thinlog.4659=false
@@ -5318,6 +5632,7 @@ gardentrees {
     B:thinlog.4681=false
     B:thinlog.4682=false
     B:thinlog.4685=false
+    B:thinlog.4686=false
     B:thinlog.4691=false
     B:thinlog.4692=false
     B:thinlog.4699=false
@@ -5328,6 +5643,8 @@ gardentrees {
     B:thinlog.479=false
     B:thinlog.480=false
     B:thinlog.481=false
+    B:thinlog.482=false
+    B:thinlog.483=false
     B:thinlog.4857=false
     B:thinlog.4863=false
     B:thinlog.4865=false
@@ -5354,6 +5671,7 @@ gardentrees {
     B:thinlog.5231=false
     B:thinlog.5281=false
     B:thinlog.5297=false
+    B:thinlog.5312=false
     B:thinlog.5324=false
     B:thinlog.5328=false
     B:thinlog.5340=false
@@ -5369,6 +5687,7 @@ gardentrees {
     B:thinlog.585=false
     B:thinlog.586=false
     B:thinlog.589=false
+    B:thinlog.590=false
     B:thinlog.592=false
     B:thinlog.595=false
     B:thinlog.596=false
@@ -5401,6 +5720,8 @@ gardentrees {
     B:thinlog.8671=false
     B:thinlog.8672=false
     B:thinlog.8673=false
+    B:thinlog.8674=false
+    B:thinlog.8675=false
     B:thinlog.8753=false
     B:thinlog.8754=false
     B:thinlog.8755=false
@@ -5431,6 +5752,7 @@ gardentrees {
     B:thinlog.9327=false
     B:thinlog.9377=false
     B:thinlog.9393=false
+    B:thinlog.9408=false
     B:thinlog.9420=false
     B:thinlog.9424=false
     B:thinlog.9436=false
@@ -5455,6 +5777,7 @@ gardentrees {
     B:thinlogfence.1135=false
     B:thinlogfence.1185=false
     B:thinlogfence.1201=false
+    B:thinlogfence.1216=false
     B:thinlogfence.1228=false
     B:thinlogfence.1232=false
     B:thinlogfence.1244=false
@@ -5471,6 +5794,8 @@ gardentrees {
     B:thinlogfence.12767=false
     B:thinlogfence.12768=false
     B:thinlogfence.12769=false
+    B:thinlogfence.12770=false
+    B:thinlogfence.12771=false
     B:thinlogfence.12849=false
     B:thinlogfence.12850=false
     B:thinlogfence.12851=false
@@ -5501,6 +5826,7 @@ gardentrees {
     B:thinlogfence.13423=false
     B:thinlogfence.13473=false
     B:thinlogfence.13489=false
+    B:thinlogfence.13504=false
     B:thinlogfence.13516=false
     B:thinlogfence.13520=false
     B:thinlogfence.13532=false
@@ -5544,6 +5870,8 @@ gardentrees {
     B:thinlogfence.4575=false
     B:thinlogfence.4576=false
     B:thinlogfence.4577=false
+    B:thinlogfence.4578=false
+    B:thinlogfence.4579=false
     B:thinlogfence.4657=false
     B:thinlogfence.4658=false
     B:thinlogfence.4659=false
@@ -5555,6 +5883,7 @@ gardentrees {
     B:thinlogfence.4681=false
     B:thinlogfence.4682=false
     B:thinlogfence.4685=false
+    B:thinlogfence.4686=false
     B:thinlogfence.4691=false
     B:thinlogfence.4692=false
     B:thinlogfence.4699=false
@@ -5565,6 +5894,8 @@ gardentrees {
     B:thinlogfence.479=false
     B:thinlogfence.480=false
     B:thinlogfence.481=false
+    B:thinlogfence.482=false
+    B:thinlogfence.483=false
     B:thinlogfence.4857=false
     B:thinlogfence.4863=false
     B:thinlogfence.4865=false
@@ -5591,6 +5922,7 @@ gardentrees {
     B:thinlogfence.5231=false
     B:thinlogfence.5281=false
     B:thinlogfence.5297=false
+    B:thinlogfence.5312=false
     B:thinlogfence.5324=false
     B:thinlogfence.5328=false
     B:thinlogfence.5340=false
@@ -5606,6 +5938,7 @@ gardentrees {
     B:thinlogfence.585=false
     B:thinlogfence.586=false
     B:thinlogfence.589=false
+    B:thinlogfence.590=false
     B:thinlogfence.592=false
     B:thinlogfence.595=false
     B:thinlogfence.596=false
@@ -5638,6 +5971,8 @@ gardentrees {
     B:thinlogfence.8671=false
     B:thinlogfence.8672=false
     B:thinlogfence.8673=false
+    B:thinlogfence.8674=false
+    B:thinlogfence.8675=false
     B:thinlogfence.8753=false
     B:thinlogfence.8754=false
     B:thinlogfence.8755=false
@@ -5668,6 +6003,7 @@ gardentrees {
     B:thinlogfence.9327=false
     B:thinlogfence.9377=false
     B:thinlogfence.9393=false
+    B:thinlogfence.9408=false
     B:thinlogfence.9420=false
     B:thinlogfence.9424=false
     B:thinlogfence.9436=false
