--- a/config/atg/biome_modifiers.cfg
+++ b/config/atg/biome_modifiers.cfg
@@ -188,6 +188,54 @@
         D:OccuranceMultiplier=1.0
     }
 
+    "Undergound Jungle M" {
+        B:AllowVillages=true
+        B:Enable=true
+        D:OccuranceMultiplier=1.0
+    }
+
+    "Volcanic Desert M" {
+        B:AllowVillages=true
+        B:Enable=true
+        D:OccuranceMultiplier=1.0
+    }
+
+    "Subterranean Savannah M" {
+        B:AllowVillages=true
+        B:Enable=true
+        D:OccuranceMultiplier=1.0
+    }
+
+    "Elysian Fields M" {
+        B:AllowVillages=true
+        B:Enable=true
+        D:OccuranceMultiplier=1.0
+    }
+
+    "Ulterior Outback M" {
+        B:AllowVillages=true
+        B:Enable=true
+        D:OccuranceMultiplier=1.0
+    }
+
+    "Fungal Forest M" {
+        B:AllowVillages=true
+        B:Enable=true
+        D:OccuranceMultiplier=1.0
+    }
+
+    "Submerged Swamp M" {
+        B:AllowVillages=true
+        B:Enable=true
+        D:OccuranceMultiplier=1.0
+    }
+
+    "Elysian Forest M" {
+        B:AllowVillages=true
+        B:Enable=true
+        D:OccuranceMultiplier=1.0
+    }
+
 }
 
 
@@ -1111,6 +1159,59 @@ TwilightForest {
     }
 
     "Twilight Lake" {
+        B:AllowVillages=true
+        B:Enable=true
+        D:OccuranceMultiplier=1.0
+    }
+
+}
+
+
+erebus {
+
+    "Undergound Jungle" {
+        B:AllowVillages=true
+        B:Enable=true
+        D:OccuranceMultiplier=1.0
+    }
+
+    "Volcanic Desert" {
+        B:AllowVillages=true
+        B:Enable=true
+        D:OccuranceMultiplier=1.0
+    }
+
+    "Subterranean Savannah" {
+        B:AllowVillages=true
+        B:Enable=true
+        D:OccuranceMultiplier=1.0
+    }
+
+    "Elysian Fields" {
+        B:AllowVillages=true
+        B:Enable=true
+        D:OccuranceMultiplier=1.0
+    }
+
+    "Ulterior Outback" {
+        B:AllowVillages=true
+        B:Enable=true
+        D:OccuranceMultiplier=1.0
+    }
+
+    "Fungal Forest" {
+        B:AllowVillages=true
+        B:Enable=true
+        D:OccuranceMultiplier=1.0
+    }
+
+    "Submerged Swamp" {
+        B:AllowVillages=true
+        B:Enable=true
+        D:OccuranceMultiplier=1.0
+    }
+
+    "Elysian Forest" {
         B:AllowVillages=true
         B:Enable=true
         D:OccuranceMultiplier=1.0
