--- a/config/bigtrees/biomegroups.cfg
+++ b/config/bigtrees/biomegroups.cfg
@@ -845,6 +845,8 @@
     S:"HILLS AND DENSE" <
         highlands.Forest Island
      >
+
+    # overrides above groups
     S:"HILLS AND DRY" <
         highlands.Steppe
      >
@@ -1121,6 +1123,12 @@
     # overrides above groups
     S:"SANDY AND DRY" <
         biomesoplenty.Desert
+     >
+
+    # overrides above groups
+    S:"SANDY AND HILLS" <
+        minecraft.Ulterior Outback M
+        minecraft.Volcanic Desert M
      >
 
     # overrides above groups
@@ -5224,6 +5232,37 @@
     S:"SANDY AND DRY Tall Oak Autumn"=
     S:"SANDY AND DRY Tall Oak Brown"=
     S:"SANDY AND DRY Yellow Big Birch"=
+    S:"SANDY AND HILLS Big Birch 0"=
+    S:"SANDY AND HILLS Big Birch 1"=
+    S:"SANDY AND HILLS Big Pine 0"=
+    S:"SANDY AND HILLS Big Pine 1"=
+    S:"SANDY AND HILLS Block Maple"=
+    S:"SANDY AND HILLS Block Oak 0"=
+    S:"SANDY AND HILLS Block Oak Autumn"=
+    S:"SANDY AND HILLS Block Oak Brown"=
+    S:"SANDY AND HILLS Block Oak Dark"=
+    S:"SANDY AND HILLS Cyprus Oak 0"=
+    S:"SANDY AND HILLS Cyprus Willow"=
+    S:"SANDY AND HILLS Dark Hat"=
+    S:"SANDY AND HILLS Dead Tree 0"=
+    S:"SANDY AND HILLS Great Oak 0"=
+    S:"SANDY AND HILLS Great Oak Autumn"=
+    S:"SANDY AND HILLS Great Oak Brown"=
+    S:"SANDY AND HILLS Great Oak Dark"=
+    S:"SANDY AND HILLS Hat Sacred Tree"=
+    S:"SANDY AND HILLS Hat Tree 0"=
+    S:"SANDY AND HILLS Pertrified Dead Tree"=
+    S:"SANDY AND HILLS Swamp Oak 0"=
+    S:"SANDY AND HILLS Tall Cherry"=
+    S:"SANDY AND HILLS Tall Dark Oak"=
+    S:"SANDY AND HILLS Tall Fir"=
+    S:"SANDY AND HILLS Tall Jacaranda"=
+    S:"SANDY AND HILLS Tall Magic Tree"=
+    S:"SANDY AND HILLS Tall Maple"=
+    S:"SANDY AND HILLS Tall Oak 0"=
+    S:"SANDY AND HILLS Tall Oak Autumn"=
+    S:"SANDY AND HILLS Tall Oak Brown"=
+    S:"SANDY AND HILLS Yellow Big Birch"=
     S:"SANDY AND HOT Big Birch 0"=
     S:"SANDY AND HOT Big Birch 1"=
     S:"SANDY AND HOT Big Pine 0"=
