--- a/config/forestry/modules.cfg
+++ b/config/forestry/modules.cfg
@@ -28,6 +28,8 @@ modules {
 
     # Compatibility plugin for BuildCraft 6.
     B:buildcraft.transport=true
+
+    # Compatibility plugin for Chisel. Adds worldgen blocks to Backpacks.
     B:chisel=true
 
     # Adds several RF engines.
@@ -68,6 +70,8 @@ modules {
 
     # Compatibility plugin for Natura. Enables farming Natura saplings.
     B:natura=true
+
+    # Compatibility plugin for Plant Mega Pack.
     B:plantmegapack=true
 
     # Adds the apiarist's pipe for beekeeping if apiculture is enabled and BuildCraft 6 is present.
@@ -75,9 +79,6 @@ modules {
 
     # Adds backpacks and crates.
     B:storage=true
-
-    # Enables compatibility with Underground Biomes. Adds textures for Forestry ores.
-    B:underground.biomes=true
 }
 
 
