Buildcraft, Railcraft, EnderIO engines

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -7852,6 +7852,38 @@ railcraft {
     B:post.4=false
     B:post.5=false
     B:post.6=false
+    B:postmetal=false
+    B:postmetal.1=false
+    B:postmetal.10=false
+    B:postmetal.11=false
+    B:postmetal.12=false
+    B:postmetal.13=false
+    B:postmetal.14=false
+    B:postmetal.15=false
+    B:postmetal.2=false
+    B:postmetal.3=false
+    B:postmetal.4=false
+    B:postmetal.5=false
+    B:postmetal.6=false
+    B:postmetal.7=false
+    B:postmetal.8=false
+    B:postmetal.9=false
+    B:postmetalplatform=false
+    B:postmetalplatform.1=false
+    B:postmetalplatform.10=false
+    B:postmetalplatform.11=false
+    B:postmetalplatform.12=false
+    B:postmetalplatform.13=false
+    B:postmetalplatform.14=false
+    B:postmetalplatform.15=false
+    B:postmetalplatform.2=false
+    B:postmetalplatform.3=false
+    B:postmetalplatform.4=false
+    B:postmetalplatform.5=false
+    B:postmetalplatform.6=false
+    B:postmetalplatform.7=false
+    B:postmetalplatform.8=false
+    B:postmetalplatform.9=false
     B:residualheat=false
     B:signal=false
     B:signal.1=false
