--- a/RevolutionPack.csproj
+++ b/RevolutionPack.csproj
@@ -3224,6 +3224,12 @@
     <None Include="scripts\ExtraUtilities.zs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="scripts\PressurePipes.zs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="scripts\EnhancedPortals.zs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="scripts\ThermalFoundation.zs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
