--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ locale: en_US
 description: "a modded Minecraft Pack by Haggle1996 hosted on the ATLauncher"
 logo: revolutionlogo2.png
 search: true
-url: http://localhost:4000
+url: http://haggle1996.github.io/RevolutionPack
 
 # Jekyll configuration
 
