--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 title: "Pack Code: RevolutionPack"
 locale: en_US
 description: "a modded Minecraft Pack by Haggle1996 hosted on the ATLauncher"
-logo: revolutionlogo2.png
+logo: RevolutionLogo2.png
 search: true
 url: http://haggle1996.github.io/RevolutionPack
 
