--- a/config/NEI/client.cfg
+++ b/config/NEI/client.cfg
@@ -28,7 +28,7 @@ inventory
 	oredict=false
 	profileRecipes=false
 	searchmode=1
-	utilities=delete, magnet
+	utilities=delete, magnet, creative, creative+, adventure
 	widgetsenabled=true
 }
 
