--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -5526,8 +5526,10 @@ gardentrees {
     B:thinlog.1135=false
     B:thinlog.1185=false
     B:thinlog.1201=false
+    B:thinlog.1214=false
     B:thinlog.1216=false
     B:thinlog.1228=false
+    B:thinlog.1230=false
     B:thinlog.1232=false
     B:thinlog.1244=false
     B:thinlog.12457=false
@@ -5575,8 +5577,10 @@ gardentrees {
     B:thinlog.13423=false
     B:thinlog.13473=false
     B:thinlog.13489=false
+    B:thinlog.13502=false
     B:thinlog.13504=false
     B:thinlog.13516=false
+    B:thinlog.13518=false
     B:thinlog.13520=false
     B:thinlog.13532=false
     B:thinlog.13536=false
@@ -5631,6 +5635,7 @@ gardentrees {
     B:thinlog.4664=false
     B:thinlog.4681=false
     B:thinlog.4682=false
+    B:thinlog.4684=false
     B:thinlog.4685=false
     B:thinlog.4686=false
     B:thinlog.4691=false
@@ -5671,8 +5676,10 @@ gardentrees {
     B:thinlog.5231=false
     B:thinlog.5281=false
     B:thinlog.5297=false
+    B:thinlog.5310=false
     B:thinlog.5312=false
     B:thinlog.5324=false
+    B:thinlog.5326=false
     B:thinlog.5328=false
     B:thinlog.5340=false
     B:thinlog.5344=false
@@ -5686,6 +5693,7 @@ gardentrees {
     B:thinlog.568=false
     B:thinlog.585=false
     B:thinlog.586=false
+    B:thinlog.588=false
     B:thinlog.589=false
     B:thinlog.590=false
     B:thinlog.592=false
@@ -5752,8 +5760,10 @@ gardentrees {
     B:thinlog.9327=false
     B:thinlog.9377=false
     B:thinlog.9393=false
+    B:thinlog.9406=false
     B:thinlog.9408=false
     B:thinlog.9420=false
+    B:thinlog.9422=false
     B:thinlog.9424=false
     B:thinlog.9436=false
     B:thinlog.9440=false
@@ -5777,8 +5787,10 @@ gardentrees {
     B:thinlogfence.1135=false
     B:thinlogfence.1185=false
     B:thinlogfence.1201=false
+    B:thinlogfence.1214=false
     B:thinlogfence.1216=false
     B:thinlogfence.1228=false
+    B:thinlogfence.1230=false
     B:thinlogfence.1232=false
     B:thinlogfence.1244=false
     B:thinlogfence.12457=false
@@ -5826,8 +5838,10 @@ gardentrees {
     B:thinlogfence.13423=false
     B:thinlogfence.13473=false
     B:thinlogfence.13489=false
+    B:thinlogfence.13502=false
     B:thinlogfence.13504=false
     B:thinlogfence.13516=false
+    B:thinlogfence.13518=false
     B:thinlogfence.13520=false
     B:thinlogfence.13532=false
     B:thinlogfence.13536=false
@@ -5882,6 +5896,7 @@ gardentrees {
     B:thinlogfence.4664=false
     B:thinlogfence.4681=false
     B:thinlogfence.4682=false
+    B:thinlogfence.4684=false
     B:thinlogfence.4685=false
     B:thinlogfence.4686=false
     B:thinlogfence.4691=false
@@ -5922,8 +5937,10 @@ gardentrees {
     B:thinlogfence.5231=false
     B:thinlogfence.5281=false
     B:thinlogfence.5297=false
+    B:thinlogfence.5310=false
     B:thinlogfence.5312=false
     B:thinlogfence.5324=false
+    B:thinlogfence.5326=false
     B:thinlogfence.5328=false
     B:thinlogfence.5340=false
     B:thinlogfence.5344=false
@@ -5937,6 +5954,7 @@ gardentrees {
     B:thinlogfence.568=false
     B:thinlogfence.585=false
     B:thinlogfence.586=false
+    B:thinlogfence.588=false
     B:thinlogfence.589=false
     B:thinlogfence.590=false
     B:thinlogfence.592=false
@@ -6003,8 +6021,10 @@ gardentrees {
     B:thinlogfence.9327=false
     B:thinlogfence.9377=false
     B:thinlogfence.9393=false
+    B:thinlogfence.9406=false
     B:thinlogfence.9408=false
     B:thinlogfence.9420=false
+    B:thinlogfence.9422=false
     B:thinlogfence.9424=false
     B:thinlogfence.9436=false
     B:thinlogfence.9440=false
