--- a/config/OpenBlocks.cfg
+++ b/config/OpenBlocks.cfg
@@ -97,7 +97,7 @@ debug {
 
 dropblock {
     # Does the elevator drain player XP when used?
-    B:elevatorDrainsXP=true
+    B:elevatorDrainsXP=false
 
     # Disable limit of blocks between elevators (equivalent to maxPassThrough = infinity)
     B:ignoreAllBlocks=false
