--- a/config/NEI/client.cfg
+++ b/config/NEI/client.cfg
@@ -16,7 +16,7 @@ command
 
 inventory
 {
-	cheatmode=2
+	cheatmode=0
 	gamemodes=creative, creative+, adventure
 	hidden=false
 	itemIDs=1
@@ -25,10 +25,10 @@ inventory
 	#For those who can't help themselves.
 	#Set this to a mode and you will be unable to change it ingame
 	lockmode=-1
-	oredict=true
+	oredict=false
 	profileRecipes=false
 	searchmode=1
-	utilities=delete, magnet, time, rain
+	utilities=delete, magnet
 	widgetsenabled=true
 }
 
