Minecraft Forum Thread

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@
 - title: Gameplay Changes
   url: https://github.com/Haggle1996/RevolutionPack/wiki/Gameplay-Changes
 
-- title: Posts
-  url: /blog/
+- title: Forum
+  url: http://www.minecraftforum.net/forums/mapping-and-modding/minecraft-mods/mod-packs/2411393-revolution-rotarycraft-themed-progression-pack-on
 
 - title: ATLauncher
   url: http://www.atlauncher.com/pack/revolution
