--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,13 @@ description: "a modded Minecraft Pack by Haggle1996 hosted on the ATLauncher"
 logo: RevolutionLogo2.png
 search: true
 url: http://haggle1996.github.io/RevolutionPack
+#url: http://localhost:4000
 
 # Jekyll configuration
 
 permalink:   /:categories/:title/
 markdown:    kramdown
-highlighter: pygments
+highlighter: rouge
 sass:
   sass_dir: _sass
   style: compressed
