Minecraft Forum Thread

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ url: http://haggle1996.github.io/RevolutionPack
 
 permalink:   /:categories/:title/
 markdown:    kramdown
-highlighter: rouge
+highlighter: pygments
 sass:
   sass_dir: _sass
   style: compressed
