--- a/config/buildcraft/main.conf
+++ b/config/buildcraft/main.conf
@@ -179,7 +179,8 @@ general {
 
 
 vars {
-    S:version.seen=6.4.10
+    # indicates the last version the user has been informed about and will suppress further notices on it.
+    S:version.seen=6.4.13
 }
 
 
